style: fix alignment again

--- a/packages/text-split/partials/checkbox-list/style.css
+++ b/packages/text-split/partials/checkbox-list/style.css
@@ -11,6 +11,7 @@
     margin-bottom: 0.75em;
 
     & .check-icon {
+      display: flex;
       margin-right: 16px;
 
       & svg {
